--- a/2.0-step.md
+++ b/2.0-step.md
@@ -9,14 +9,14 @@
 ## 2. 获取BCode (激活码)
 ### 注册后登录后台，到数据面板处领取，如图所示  
 ![Image](image/step-bcode.png)  
-> **每个账号 每小时 可以领取 10 个  
-> 每个账号 每天 最多领取 100 个  
-> 若账号中已有绑定设备，则 未使用 的 BCode 有效期为 20 天  
-> 若账号无绑定设备，则 未使用 的 BCode 有效期为 10 天  
-> BCode (激活码) 分为以下三类，请根据实际情况选择：**  
-> ● 中国大陆  
-> ● 中国大陆 - 计算任务专用  
-> ● 非中国大陆  
+- **每个账号 每小时 可以领取 10 个**  
+- **每个账号 每天 最多领取 100 个**  
+- **若账号中已有绑定设备，则 未使用 的 BCode 有效期为 20 天**  
+- **若账号无绑定设备，则 未使用 的 BCode 有效期为 10 天**  
+- **BCode (激活码) 分为以下三类，请根据实际情况选择：**  
+  - 中国大陆  
+  - 中国大陆 - 计算任务专用  
+  - 非中国大陆  
 ### 不清楚如何选择 BCode的，可访问：
 ### -> [常见问题 - BCode类型](faq-bcode.md)
 <br>
