--- a/2.0-step.md
+++ b/2.0-step.md
@@ -18,16 +18,16 @@
   - 中国大陆 - 计算任务专用  
   - 非中国大陆  
 ### 不清楚如何选择 BCode的，可访问：
-### -> [常见问题 - BCode类型](faq-bcode.md)
+### -> [常见问题 - BCode类型](6.1-faq-bcode.md)
 <br>
 
 ## 3. 选择任务，设备并获取收益
 ### 可根据自己的实际情况选择任务类型和对应的设备：
-### -> [任务类型](task.md)
+### -> [任务类型](3.0.0-task.md)
 ### 不明白设备如何刷机的朋友，可以直接前往官方合作渠道购买已经刷好的设备（非专用设备）：
-### -> [官方合作设备渠道](store.md)
+### -> [官方合作设备渠道](2.1-store.md)
 <br>
 
 ## 4. 收益兑换和提现
-### ->  [提取收益](withdrawal.md)
-### ->  [常见问题 - 提取收益](faq-withdrawal.md)
+### ->  [提取收益](5.0-withdrawal.md)
+### ->  [常见问题 - 提取收益](6.4-faq-withdrawal.md)
