--- a/3.2.0-lite-node.md
+++ b/3.2.0-lite-node.md
@@ -10,14 +10,14 @@
 
 ## 接入流程
 ### 1. 从支持设备列表中选择一个：
-**-> [开发板类设备 (基于ARM架构处理器)](arm.md)  
--> [电脑或服务器 (基于x86-x64架构处理器)](x86.md)**
+**-> [开发板类设备 (基于ARM架构处理器)](3.2.1-arm.md)  
+-> [电脑或服务器 (基于x86-x64架构处理器)](3.2.2-x86.md)**
 
 ### 2. 绑定设备
 > **除非有特殊说明，开发板类设备或x86-x64设备的大部分镜像不支持登录**  
 
-**-> [绑定设备](bound.md)  
--> [常见问题 - 设备绑定](faq-bound.md)**
+**-> [绑定设备](4.0-bound.md)  
+-> [常见问题 - 设备绑定](6.1-faq-bound.md)**
 
 ### 3. 查看后台
 > **设备绑定后，网络环境正常且在中国大陆境内，设备信息会逐步上报。需时 20 - 40 分钟不等**  
@@ -37,9 +37,9 @@
 <br>
 
 ## 获取 并 提取 收益
-### -> [提取收益](withdrawal.md)
-### -> [常见问题 - 提取收益](faq-withdrawal.md)
+### -> [提取收益](5.0-withdrawal.md)
+### -> [常见问题 - 提取收益](6.4-faq-withdrawal.md)
 <br>
 
 ## 常见问题
-### -> [常见问题 - 轻节点 - 网络任务](faq-network.md)
+### -> [常见问题 - 轻节点 - 计算任务](6.6-faq-cal.md)
