--- a/3.2.0-lite-node.md
+++ b/3.2.0-lite-node.md
@@ -34,6 +34,10 @@
 ● 请勿频繁操作切换任务类型，可能会导致设备无法正常工作  
 ● 进行任务切换会导致硬盘现有数据丢失，需要重新进行数据同步  
 ● 不论设备运行何种任务，不同设备的数据盘互换会导致硬盘数据被清空，需要重新进行同步**  
+#### 各设备可选任务列表及配置要求
+**-> [任务选择 - 64位 开发板类设备 (基于 ARMv8 架构处理器，N1，我家云 / 粒子云 / 贝壳云 等)](3.2.3-armv8.md)  
+-> [任务选择 - 64 位 电脑或服务器 (基于 x86-x64 架构处理器)](3.2.4-x86-x64.md)  
+-> [任务选择 - 32 位 开发板类设备 (基于 ARMv7 架构处理器，玩客云等)](3.2.5-armv7.md)**  
 <br>
 
 ## 获取 并 提取 收益
