--- a/4.0-bound.md
+++ b/4.0-bound.md
@@ -17,7 +17,8 @@ http://主机IP:9017
 <br>
 
 ## 3. 安卓 / Android
-### [下载地址](http://bonuscloud-imgs.oss.cn-north-1.jcloudcs.com/BonusCloud-LiteNode-admin-forPI.apk) / [Google Play](https://play.google.com/store/apps/details?id=io.bonuscloud.app)
+### -> [官网下载地址](http://bonuscloud-imgs.oss.cn-north-1.jcloudcs.com/BonusCloud-LiteNode-admin-forPI.apk) 
+### -> [Google Play](https://play.google.com/store/apps/details?id=io.bonuscloud.app)
 <br>
 
 ## 4. SSH
