--- a/5.0-withdrawal.md
+++ b/5.0-withdrawal.md
@@ -18,3 +18,7 @@
   - 也可以 预约自动提现，1 - 3 个 工作日 到账
 - ### 非中国大陆用户 / 非中國大陸用戶
   - 可提到交易所进行交易 / 可提到交易所進行交易
+<br>
+
+## 常见问题
+### -> [常见问题 - 提取收益](6.4-faq-withdrawal.md)
