--- a/2.1-store.md
+++ b/2.1-store.md
@@ -8,6 +8,6 @@
 <br>
 
 ## 在以上店铺购买设备：
-### ● 兼容 BonusCloud 设备购买首选推荐，并给予官方授权。
-### ● 所有设备均已完成刷机工作，直接激活即可。
-### ● 每通过该店铺购买一台设备，BonusCloud 将为购买设备的账户赠送一个BCode，每个账户最多可以获得3个BCode的赠送。
+- ### 兼容 BonusCloud 设备购买首选推荐，并给予官方授权。
+- ### 所有设备均已完成刷机工作，直接激活即可。
+- ### 每通过该店铺购买一台设备，BonusCloud 将为购买设备的账户赠送一个BCode，每个账户最多可以获得3个BCode的赠送。
